--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  go_router: ^6.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  go_router_builder: ^1.1.3
+  build_runner: ^2.3.3
+  build_verify: ^3.1.0
 
 flutter:
   uses-material-design: true
