--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  connectivity_plus: ^3.0.3
+  dartz: ^0.10.1
+  flutter_bloc: ^8.1.2
+  get_it: ^7.2.0
   go_router: ^6.2.0
 
 dev_dependencies:
